working contact form

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -10,7 +10,7 @@
   <div class='col l8 m7 s12'>
     <h4 class='grey-text'>
       Michael Pierce is a web designer and full stack developer from beautiful
-      Denver, Colorado. A graduate from Colorado School of Mines holding a b.s.
+      Denver, Colorado. A graduate from Colorado School of Mines holding a B.S.
       in Economics and Business. Michael is a self-taught programmer,
       specializing in UI/UX design, Ruby on Rails, and Angular JS.
     </h4>
