--- a/app/views/static_pages/work.html.erb
+++ b/app/views/static_pages/work.html.erb
@@ -92,10 +92,11 @@
         <span class='card-title grey-text text-darken-2'><i class='mdi-navigation-close right'></i></span>
         <br>
         <h5 class='grey-text text-darken-2'>SPEAKER WIRE CALCULATOR</h5>
-        <p>Paperless "We Owe" form management for automotive dealerships.</p>
+        <p>Speaker Wire Calculator is a web app designed to calculate the optimal gauge of speaker wire or cable needed for a home theater.</p>
+        <p></p>
         <p>
           <i class='mdi-av-web'></i>
-          <a href='http://www.weowepro.com'>www.WeOwePro.com</a>
+          <a href='http://www.speakerwirecalculator.com'>www.SpeakerWireCalculator.com</a>
         </p>
       </div>
     </div>
