--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,27 @@
           MICHAEL DEAN PIERCE
         </a>
         <ul class='right hide-on-med-and-down'>
-          <li><a href='/work' class='grey-text text-darken-2'>WORK</a></li>
-          <li><a href='/about' class='grey-text text-darken-2'>ABOUT</a></li>
-          <li><a href='/contact' class='grey-text text-darken-2'>CONTACT</a></li>
+          <li class="<%= active_link_to_class('#', active:[['static_pages'],['work']]) %>">
+            <a href='/' class='grey-text text-darken-2'>WORK</a>
+          </li>
+          <li class="<%= active_link_to_class('#', active:[['static_pages'],['about']]) %>">
+            <a href='/about' class='grey-text text-darken-2'>ABOUT</a>
+          </li>
+          <li class="<%= active_link_to_class('#', active:[['static_pages'],['contact']]) %>">
+            <a href='/contact' class='grey-text text-darken-2'>CONTACT</a>
+          </li>
         </ul>
 
         <ul id='nav-mobile' class='side-nav'>
-          <li><a href='/work' class='grey-text text-darken-2'>WORK</a></li>
-          <li><a href='/about' class='grey-text text-darken-2'>ABOUT</a></li>
-          <li><a href='/contact' class='grey-text text-darken-2'>CONTACT</a></li>
+          <li class="<%= active_link_to_class('#', active:[['static_pages'],['work']]) %>">
+            <a href='/' class='grey-text text-darken-2'>WORK</a>
+          </li>
+          <li class="<%= active_link_to_class('#', active:[['static_pages'],['about']]) %>">
+            <a href='/about' class='grey-text text-darken-2'>ABOUT</a>
+          </li>
+          <li class="<%= active_link_to_class('#', active:[['static_pages'],['contact']]) %>">
+            <a href='/contact' class='grey-text text-darken-2'>CONTACT</a>
+          </li>
         </ul>
         <div class="hide-on-med-and-up" style='float:left;'>
           <a href='/' class='grey-text text-darken-2'>
@@ -78,6 +90,7 @@
         </div>
       </div>
     </footer>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
 
