Added flash to contact form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
     <br><br>
     <main>
       <div class='container'>
+        <%= custom_bootstrap_flash %>
         <%= yield %>
       </div>
     </main>
