--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,9 +1,19 @@
 <title>MDP - CONTACT</title>
 <%= form_for Contact.new do |f| %>
   <h1 class='grey-text text-darken-2'>
-    CONTACT
+    <span class='hide-on-small-only'>
+      CONTACT
+      <h4 class='grey-text'>For questions or inquiries use the form below.</h4>
+    </span>
+    <span class='hide-on-med-and-up'>
+      <center>
+        CONTACT
+        <h4 class='grey-text'>For questions or inquiries use the form below.</h4>
+      </center>
+    </span>
   </h1>
-  <h4 class='grey-text'>For questions, inquiries, or generally conversation, use the form below.</h4>
+
+
   <br><br>
   <form>
     <div class='row'>
