--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['about']]) %>">
             <a href='/about' class='grey-text text-darken-2'>ABOUT</a>
           </li>
-          <li class="<%= active_link_to_class('#', active:[['static_pages'],['contact']]) %>">
+          <li class="<%= active_link_to_class('#', active:[['contacts'],['new']]) %>">
             <a href='/contact' class='grey-text text-darken-2'>CONTACT</a>
           </li>
         </ul>
@@ -32,7 +32,7 @@
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['about']]) %>">
             <a href='/about' class='grey-text text-darken-2'>ABOUT</a>
           </li>
-          <li class="<%= active_link_to_class('#', active:[['static_pages'],['contact']]) %>">
+          <li class="<%= active_link_to_class('#', active:[['contacts'],['new']]) %>">
             <a href='/contact' class='grey-text text-darken-2'>CONTACT</a>
           </li>
         </ul>
