--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,24 @@
 <title>MDP - ABOUT</title>
 <h1 class='grey-text text-darken-2'>
-  ABOUT
+  <span class='hide-on-small-only'>
+    ABOUT
+  </span>
+  <span class='hide-on-med-and-up'>
+    <center>ABOUT</center>
+  </span>
 </h1>
 <div class='row'>
   <div class='col l4 m5 s12'>
-    <img src='images/michael_pierce.jpg' alt='Michael Pierce' class='circle'
-         height='200' width='200'>
+    <span class='hide-on-small-only'>
+      <img src='images/michael_pierce.jpg' alt='Michael Pierce' class='circle'
+           height='200' width='200'>
+    </span>
+    <span class='hide-on-med-and-up'>
+      <center>
+        <img src='images/michael_pierce.jpg' alt='Michael Pierce' class='circle'
+             height='200' width='200'>
+      </center>
+    </span>
   </div>
   <div class='col l8 m7 s12'>
     <h4 class='grey-text'>
