--- a/app/views/static_pages/work.html.erb
+++ b/app/views/static_pages/work.html.erb
@@ -66,13 +66,13 @@
         <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/openwatertracker.png'>
       </div>
       <div class='card-content'>
-        <span class='card-title activator grey-text text-darken-2'>O.W.T. <i class='mdi-navigation-more-vert right'></i></span>
+        <span class='card-title activator grey-text text-darken-2'>OWT <i class='mdi-navigation-more-vert right'></i></span>
       </div>
       <div class='card-reveal grey-text'>
         <span class='card-title grey-text text-darken-2'><i class='mdi-navigation-close right'></i></span>
         <br>
-        <h5 class='grey-text text-darken-2'>OPEN WATER TRACKER</h5>
-        <p>An elegant mobile-web app for managing open water swim. Keep track of swimmers and analytics in real time.</p>
+        <h5 class='grey-text text-darken-2'>OWT</h5>
+        <p>An elegant mobile-web app for managing open water USMS swim sessions.</p>
         <p>
           <i class='mdi-av-web'></i>
           <a href='http://www.openwatertracker.com'>www.OpenWaterTracker.com</a>
@@ -86,13 +86,13 @@
         <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/speakerwirecalculator.png'>
       </div>
       <div class='card-content'>
-        <span class='card-title activator grey-text text-darken-2'>S.W.C<i class='mdi-navigation-more-vert right'></i></span>
+        <span class='card-title activator grey-text text-darken-2'>SWC<i class='mdi-navigation-more-vert right'></i></span>
       </div>
       <div class='card-reveal grey-text'>
         <span class='card-title grey-text text-darken-2'><i class='mdi-navigation-close right'></i></span>
         <br>
-        <h5 class='grey-text text-darken-2'>SPEAKER WIRE CALCULATOR</h5>
-        <p>Speaker Wire Calculator is a web app designed to calculate the optimal gauge of speaker wire or cable needed for a home theater.</p>
+        <h5 class='grey-text text-darken-2'>SWC</h5>
+        <p>Web app designed to calculate the optimal gauge of speaker wire or cable needed for a home theater.</p>
         <p></p>
         <p>
           <i class='mdi-av-web'></i>
