--- a/app/views/static_pages/work.html.erb
+++ b/app/views/static_pages/work.html.erb
@@ -3,7 +3,7 @@
   <div class='col s12 m6 l4'>
     <div class='card'>
       <div class='card-image waves-effect waves-block waves-light'>
-        <img class='activator' style='border-bottom:1px solid #EEEEEE;' src='images/affektive.png'>
+        <img class='activator' style='border-bottom:1px solid #EEEEEE;' src='images/rsz_affektive.jpg'>
       </div>
       <div class='card-content'>
         <span class='activator card-title grey-text text-darken-2'>AFFEKTIVE<i class='mdi-navigation-more-vert right'></i></span>
@@ -23,7 +23,7 @@
   <div class='col s12 m6 l4'>
     <div class='card'>
       <div class='card-image waves-effect waves-block waves-light'>
-        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/autolytx.png'>
+        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/rsz_autolytx.jpg'>
       </div>
       <div class='card-content'>
         <span class='card-title activator grey-text text-darken-2'>AUTOLYTX <i class='mdi-navigation-more-vert right'></i></span>
@@ -43,7 +43,7 @@
   <div class='col s12 m6 l4'>
     <div class='card'>
       <div class='card-image waves-effect waves-block waves-light'>
-        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/digiquatics.png'>
+        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/rsz_digiquatics.jpg'>
       </div>
       <div class='card-content'>
         <span class='card-title activator grey-text text-darken-2'>DIGIQUATICS <i class='mdi-navigation-more-vert right'></i></span>
@@ -63,7 +63,7 @@
   <div class='col s12 m6 l4'>
     <div class='card'>
       <div class='card-image waves-effect waves-block waves-light'>
-        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/openwatertracker.png'>
+        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/rsz_openwatertracker.jpg'>
       </div>
       <div class='card-content'>
         <span class='card-title activator grey-text text-darken-2'>OWT <i class='mdi-navigation-more-vert right'></i></span>
@@ -83,7 +83,7 @@
   <div class='col s12 m6 l4'>
     <div class='card'>
       <div class='card-image waves-effect waves-block waves-light'>
-        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/speakerwirecalculator.png'>
+        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/rsz_speakerwirecalculator.jpg'>
       </div>
       <div class='card-content'>
         <span class='card-title activator grey-text text-darken-2'>SWC<i class='mdi-navigation-more-vert right'></i></span>
@@ -104,7 +104,7 @@
   <div class='col s12 m6 l4'>
     <div class='card'>
       <div class='card-image waves-effect waves-block waves-light'>
-        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/weowepro.png'>
+        <img class='activator' style=' border-bottom:1px solid #EEEEEE;' src='images/rsz_weowepro.jpg'>
       </div>
       <div class='card-content'>
         <span class='card-title activator grey-text text-darken-2'>WEOWEPRO<i class='mdi-navigation-more-vert right'></i></span>
