--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,3 +13,31 @@ body {
 main {
   flex: 1 0 auto;
 }
+
+/* label color */
+ .input-field label {
+   color: white !important;
+ }
+ /* label focus color */
+ .input-field input[type=text]:focus + label {
+   color: white !important;
+ }
+ /* label underline focus color */
+ .input-field input[type=text]:focus {
+   border-bottom: 1px solid white !important;
+   box-shadow: 0 1px 0 0 white !important;
+ }
+ /* valid color */
+ .input-field input[type=text].valid {
+   border-bottom: 1px solid white !important;
+   box-shadow: 0 1px 0 0 white !important;
+ }
+ /* invalid color */
+ .input-field input[type=text].invalid {
+   border-bottom: 1px solid white !important;
+   box-shadow: 0 1px 0 0 white !important;
+ }
+ /* icon prefix focus color */
+ .input-field .prefix.active {
+   color: white !important;
+ }
