--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,7 @@
     $(document).ready(function(){
       $('.slider').slider({full_width: true, indicators: false});
     });
-
     </script>
-
-    <!--
-    Indicators	Set to false to hide slide indicators. (Default: True)
-Height	Set height of slider. (Default: 400)
-Transition	Set the duration of the transition animation in ms. (Default: 500)
-Interval	Set the duration between transitions in ms. (Default: 6000)
-     -->
   </head>
   <body>
     <nav class='grey lighten-5' role='navigation'>
@@ -34,7 +26,6 @@ Interval	Set the duration between transitions in ms. (Default: 6000)
             <a href='#' class='grey-text text-darken-2'>PRE-ORDER THE BOOK</a>
           </li>
         </ul>
-
         <ul id='nav-mobile' class='side-nav'>
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['work']]) %>">
             <a href='/' class='grey-text text-darken-2'>WORK</a>
@@ -63,7 +54,8 @@ Interval	Set the duration between transitions in ms. (Default: 6000)
       <div class='container'>
         <div class='row'>
           <div class='col l6 s12'>
-            <a href='/contact' class='waves-effect waves-light btn-large white red-text text-darken-4'>
+            <a href='/the_truth_about_masturbation_send_me_my_free_chapter'
+               class='waves-effect waves-light btn-large white red-text text-darken-4'>
               Get The First Chapter Free
             </a>
           </div>
@@ -95,10 +87,6 @@ Interval	Set the duration between transitions in ms. (Default: 6000)
   }); // end of document ready
 })(jQuery); // end of jQuery name space
 </script>
-
-
-
-
 <style>
 body {
     background-image:url('/public/wheat_field_sunset.jpg');
