--- a/app/views/static_pages/quotes.html.erb
+++ b/app/views/static_pages/quotes.html.erb
@@ -1,8 +1,8 @@
+<title>The Truth About Masturbation eBook // QUOTES</title>
 <center>
   <h1 class='grey-text text-darken-3'>The Truth About Masturbation<br>-Quotes-</h1>
 </center>
 <br><br>
-
 <div class='row container'>
   <div class='col m6'>
     <h5 class='grey-text text-darken-3'>
