--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,31 @@
 <title>The Truth About Masturbation eBook // BOOK</title>
 <div class='row container'>
   <h1 class='grey-text text-darken-3'>The Truth About Masturbation</h1>
-  <div class='col m6'>
+
+  <div class='hide-on-small-only'>
+    <div class='col m6'>
+      <h4 class='grey-text text-darken-3'>
+        A brief journey through the history, societal, and religious views
+        of masturbaiton.
+      </h4>
+      <br><br>
+      <a class='waves-effect waves-light btn-large red darken-4 white-text'
+         style='width:300px;'>
+        Pre-order the eBook!
+      </a>
+      <br><br>
+      <a class='waves-effect waves-light btn-large red darken-4 white-text'
+         style='width:300px;'
+         href='/the_truth_about_masturbation_send_me_my_free_chapter'>
+        Get the First Chapter Free!
+      </a>
+    </div>
+    <div class='col m6'>
+      <%= image_tag('http://ecx.images-amazon.com/images/I/813WoynVoZL.jpg', size: '300x450') %>
+    </div>
+  </div>
+  <div class='hide-on-med-and-up'>
+    <%= image_tag('http://ecx.images-amazon.com/images/I/813WoynVoZL.jpg', size: '300x450') %>
     <h4 class='grey-text text-darken-3'>
       A brief journey through the history, societal, and religious views
       of masturbaiton.
@@ -18,12 +42,9 @@
       Get the First Chapter Free!
     </a>
   </div>
-  <div class='col m6'>
-    <%= image_tag('http://ecx.images-amazon.com/images/I/813WoynVoZL.jpg', size: '300x450') %>
-  </div>
 </div>
 <br>
-<div class='row red darken-4 valign-wrapper' style='height: 325px;'>
+<div class='row red darken-4 valign-wrapper'>
   <div class='container'>
     <%= form_for Contact.new do |f| %>
       <form>
@@ -31,15 +52,15 @@
           <br>
           <h4 class='white-text'>Get the first chapter free! Just enter your first name and email!</h4>
           <br><br>
-          <div class='input-field col s2'>
+          <div class='input-field col s12 m2'>
             <%= f.text_field :first_name %>
             <label for='first_name'>First Name</label>
           </div>
-          <div class='input-field col s4'>
+          <div class='input-field col s12 m4'>
             <%= f.text_field :email %>
             <label for='email'>Email</label>
           </div>
-          <div class='col s6'>
+          <div class='col s12 m6'>
             <button class='btn btn-large waves-effect waves-light white red-text text-darken-4'>
               Send me my free chapter!
               <i class='mdi-content-send right'></i>
@@ -48,6 +69,7 @@
         </div>
       </form>
     <% end %>
+    <br>
   </div>
 </div>
 <div class='slider'>
@@ -73,54 +95,56 @@
   </ul>
 </div>
 <br><br>
-<div class='row red darken-4 white-text' style='height: 400px;'>
+<div class='row red darken-4 white-text'>
   <br><br><br><br>
   <div class='container'>
-    <div class='col m6'>
+    <div class='col m6 s12'>
       <div class='row'>
-        <div class='col m2'>
+        <div class='col s2'>
           <i class="medium mdi-social-person"></i>
         </div>
-        <div class='col m10'>
+        <div class='col s10'>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
           <strong>-John W</strong>
         </div>
       </div>
     </div>
-    <div class='col m6'>
+    <div class='col m6 s12'>
       <div class='row'>
-        <div class='col m2'>
+        <div class='col s2'>
           <i class="medium mdi-social-person"></i>
         </div>
-        <div class='col m10'>
+        <div class='col s10'>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
           <strong>-Jacob T</strong>
         </div>
       </div>
     </div>
-    <div class='col m6'>
+    <div class='col m6 s12'>
       <div class='row'>
-        <div class='col m2'>
+        <div class='col s2'>
           <i class="medium mdi-social-person"></i>
         </div>
-        <div class='col m10'>
+        <div class='col s10'>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
           <strong>-Jeff A</strong>
         </div>
       </div>
     </div>
-    <div class='col m6'>
+    <div class='col m6 s12'>
       <div class='row'>
-        <div class='col m2'>
+        <div class='col s2'>
           <i class="medium mdi-social-person"></i>
         </div>
-        <div class='col m10'>
+        <div class='col s10'>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
           <strong>-Wayne J</strong>
+          <br><br><br><br>
         </div>
       </div>
     </div>
   </div>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
 <br><br>
 <div class='container'>
@@ -163,6 +187,7 @@
   <br><br>
   <center>
     <h4 class='grey-text text-darken-3'>Pre-Order the eBook Today!</h4>
-    <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png') %>
+    <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', class:'hide-on-small-only') %>
+    <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x200', class:'hide-on-med-and-up') %>
   </center>
 </div>
