Grey color scheme

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,6 +20,10 @@ main {
   flex: 1 0 auto;
 }
 
+.footer-fix{
+  margin-top:0px !important;
+}
+
 /* label color */
  .input-field label {
    color: white !important;
