--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     </script>
   </head>
   <body>
-    <nav class='grey lighten-5' role='navigation'>
+    <nav class='grey lighten-2' role='navigation'>
       <div class='nav-wrapper container'>
         <ul class='right hide-on-med-and-down'>
           <li class="<%= active_link_to_class('#', active:[['static_pages'],['index']]) %>">
@@ -42,17 +42,17 @@
         <a href='#' data-activates='nav-mobile' class='button-collapse right'><i class='grey-text mdi-navigation-menu'></i></a>
       </div>
     </nav>
-    <main class='grey lighten-5'>
+    <main class='grey lighten-2'>
       <br>
       <%= custom_bootstrap_flash %>
       <%= yield %>
     </main>
-    <footer class='sticky-footer page-footer red darken-4'>
+    <footer class='sticky-footer page-footer grey darken-3 footer-fix'>
       <div class='container'>
         <div class='row'>
           <div class='col l6 s12'>
             <a href='/the_truth_about_masturbation_send_me_my_free_chapter'
-               class='waves-effect waves-light btn-large white red-text text-darken-4'>
+               class='waves-effect waves-light btn-large blue white-text'>
               Get The First Chapter Free
             </a>
           </div>
