--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -14,7 +14,7 @@
           <label for='email'>Email</label>
         </div>
       </div>
-      <button class='btn btn-large waves-effect waves-light red darken-4 white-text'>
+      <button class='btn btn-large waves-effect waves-light blue white-text'>
         Send me my free chapter!
         <i class='mdi-content-send right'></i>
       </button>
