Messing with colors and book cover

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,40 +3,42 @@
   <h1 class='grey-text text-darken-3'>The Truth About Masturbation</h1>
 
   <div class='hide-on-small-only'>
-    <div class='col m6'>
-      <h4 class='grey-text text-darken-3'>
-        A brief journey through the history, societal, and religious views
-        of masturbaiton.
-      </h4>
+    <div class='col m7'>
+      <h5 class='grey-text text-darken-3'>
+        Is masturbation a sin? A thought provoking journey through the varying
+        religious, societal, and scientific views on masturbation throughout
+        history.
+      </h5>
       <br><br>
-      <a class='waves-effect waves-light btn-large blue white-text'
+      <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
          style='width:300px;'>
         Pre-order the eBook!
       </a>
       <br><br>
-      <a class='waves-effect waves-light btn-large blue white-text'
+      <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
          style='width:300px;'
          href='/the_truth_about_masturbation_send_me_my_free_chapter'>
         Get the First Chapter Free!
       </a>
     </div>
-    <div class='col m6'>
-      <%= image_tag('http://ecx.images-amazon.com/images/I/71dWDwu8-CL.jpg', size: '300x450', class:"z-depth-2") %>
+    <div class='col m5'>
+      <%= image_tag('/masturbation.png', size: '300x450', class:"z-depth-2") %>
     </div>
   </div>
   <div class='hide-on-med-and-up'>
-    <%= image_tag('http://ecx.images-amazon.com/images/I/71dWDwu8-CL.jpg', size: '300x450', class:"z-depth-2") %>
+    <%= image_tag('/masturbation.png', size: '300x450', class:"z-depth-2") %>
     <h4 class='grey-text text-darken-3'>
-      A brief journey through the history, societal, and religious views
-      of masturbaiton.
+      Is masturbation a sin? A thought provoking journey through the varying
+      religious, societal, and scientific views on masturbation throughout
+      history.
     </h4>
     <br><br>
-    <a class='waves-effect waves-light btn-large grey darken-3 white-text'
+    <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
        style='width:300px;'>
       Pre-order the eBook!
     </a>
     <br><br>
-    <a class='waves-effect waves-light btn-large grey darken-3 white-text'
+    <a class='waves-effect waves-light btn-large light-blue darken-4 white-text'
        style='width:300px;'
        href='/the_truth_about_masturbation_send_me_my_free_chapter'>
       Get the First Chapter Free!
@@ -63,7 +65,7 @@
             <label for='email'>Email</label>
           </div>
           <div class='col s12 m6'>
-            <button class='btn btn-large waves-effect waves-light blue white-text'>
+            <button class='btn btn-large waves-effect waves-light light-blue darken-4 white-text'>
               Send me my free chapter!
               <i class='mdi-content-send right'></i>
             </button>
@@ -79,22 +81,26 @@
     <li>
       <img src="#"/>
       <div class='caption left-align'>
-        <h3 class='grey-text text-darken-3'>What You'll Learn</h3>
-        <h5 class='grey-text text-darken-3'>Item #1</h5>
+        <h3 class='grey-text text-darken-3'>Is masturbation a sin? </h3>
+        <h5 class='grey-text text-darken-3'>
+          You'll learn what the world's religions teach on the subject of masturbation.
+        </h5>
       </div>
     </li>
     <li>
       <div class='caption left-align'>
-        <img src="#"/>
-        <h3 class='grey-text text-darken-3'>What You'll Learn</h3>
-        <h5 class='grey-text text-darken-3'>Item #2</h5>
+        <h3 class='grey-text text-darken-3'>Who says you shouldn't masturbate?</h3>
+        <h5 class='grey-text text-darken-3'>
+          You'll learn of the extreme measures taken by some to prevent others from masturbating.
+        </h5>
       </div>
     </li>
     <li>
       <div class='caption left-align'>
-        <img src="#"/>
-        <h3 class='grey-text text-darken-3'>What You'll Learn</h3>
-        <h5 class='grey-text text-darken-3'>Item #3</h5>
+        <h3 class='grey-text text-darken-3'>Is masturbation bad for you?</h3>
+        <h5 class='grey-text text-darken-3'>
+          You'll learn the scientific intricacies of the biology behind masturbation.
+        </h5>
       </div>
     </li>
   </ul>
@@ -155,25 +161,45 @@
 <div class='container'>
   <h2 class='grey-text text-darken-3'>What Gets Covered?</h2>
   <div class='row grey-text text-darken-3'>
-    <div class='col m4'>
+    <div class='col m6'>
       <ul>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Coca Cola</li>
+        <li><b>Introduction</b></li>
+        <li>Why write this book?</li>
+        <li>Who's interested in this information?</li>
+        <li>Why this issue matters?</li>
+      </ul>
+      <ul>
+        <li><b>Religion</b></li>
+        <li>Is masturbation a sin?</li>
+        <li>-According to Christianity</li>
+        <li>-According to Judaism</li>
+        <li>-According to Islam</li>
+        <li>-Eastern religions</li>
+        <li>-Other views</li>
+      </ul>
+      <ul>
+        <li><b>Society</b></li>
+        <li>Societal views on masturbation through the centuries</li>
+        <li>Early writings referring to masturbation (Religious and non-religious)</li>
+        <li>Attempts by various groups to prevent masturbation</li>
       </ul>
     </div>
-    <div class='col m4'>
+    <div class='col m6'>
       <ul>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Coca Cola</li>
+        <li><b>Science</b></li>
+        <li>Masturbation and the Animal Kingdom</li>
+        <li>-Do animals masturbate?</li>
+        <li>-Do animals fantasize?</li>
+        <li>Psychology and masturbation</li>
+        <li>Does masturbation alter your mind?</li>
+        <li>The Anatomy and Physiology of masturbation</li>
+        <li>-Chemical changes and health effects</li>
       </ul>
-    </div>
-    <div class='col m4'>
       <ul>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Coca Cola</li>
+        <li><b>Final Conclusion</b></li>
+        <li>What are physical, mental and spiritual effects of masturbation?</li>
+        <li>Can masturbation help you achieve your spiritual and personal aspirations?</li>
+        <li>Should masturbation be avoided and shunned, or should it be accepted and approved?</li>
       </ul>
     </div>
   </div>
@@ -190,7 +216,7 @@
 <div class='container'>
   <br><br>
   <center>
-    <h4 class='grey-text text-darken-3'>Pre-Order the eBook Today!</h4>
+    <h4 class='grey-text text-darken-3'>Pre-Order the eBook on Amazon Today!</h4>
     <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', class:'hide-on-small-only') %>
     <%= image_tag('http://www.vncsolutions.com/wp-content/uploads/2015/01/amazon-183750_640.png', size:'300x200', class:'hide-on-med-and-up') %>
   </center>
