--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js'></script>
     <script>
     $(document).ready(function(){
-      $('.slider').slider({full_width: true, indicators: false});
+      $('.slider').slider({full_width: true, indicators: false, height: 250});
     });
     </script>
   </head>
@@ -50,19 +50,26 @@
     <footer class='sticky-footer page-footer grey darken-3 footer-fix'>
       <div class='container'>
         <div class='row'>
-          <div class='col l6 s12'>
+          <div class='col l8 s12'>
+            <p class='white-text'>
+              Masturbation has been practiced by humans for at least as long as
+              we have had written language, and likely long before then.
+              However, masturbation is a difficult issue for followers of
+              religion given the various religious laws pertaining to Suality
+              and the guilt, shame, and danger in store for those who do not
+              follow these laws. Whether you are a follower of Islam,
+              Christianity, Judaism, or another view, The Truth About Masturbation
+               will help you to understand the full context of masturbation
+               throughout history with the goal of helping you become a better,
+               stronger person mentally, physically, and spiritually.
+            </p>
+          </div>
+          <div class='col l4 s12'>
+            <br>
             <a href='/the_truth_about_masturbation_send_me_my_free_chapter'
-               class='waves-effect waves-light btn-large blue white-text'>
+               class='waves-effect waves-light btn-large light-blue darken-4 white-text'>
               Get The First Chapter Free
             </a>
-          </div>
-          <div class='col l4 offset-l2 s12'>
-            <p class='white-text'>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco
-              laboris nisi ut aliquip ex ea commodo consequat."
-            </p>
           </div>
         </div>
       </div>
