Minor css on main blog page

--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -4,7 +4,7 @@
     <div class='col s12 m6'>
       <div class='card'>
         <div class='card-image'>
-          <img height='325' src='http://upload.wikimedia.org/wikipedia/commons/6/6a/Cornflakes_in_bowl.jpg'>
+          <img width='400' height='325' src='http://upload.wikimedia.org/wikipedia/commons/6/6a/Cornflakes_in_bowl.jpg'>
         </div>
         <div class='card-content'>
           <span class='card-title grey-text text-darken-3'>Corn Flakes and Masturbation</span>
@@ -18,7 +18,7 @@
     <div class='col s12 m6'>
       <div class='card'>
         <div class='card-image'>
-          <img height='325' src='http://static02.mediaite.com/themarysue/uploads//2014/01/monkey.jpg'>
+          <img width='400' height='325' src='http://static02.mediaite.com/themarysue/uploads//2014/01/monkey.jpg'>
         </div>
         <div class='card-content'>
           <span class='card-title grey-text text-darken-3'>Monkeys Enjoy Porn</span>
@@ -32,7 +32,7 @@
     <div class='col s12 m6'>
       <div class='card'>
         <div class='card-image'>
-          <img height='325' src='http://www.themuslimtimes.org/wp-content/themes/advanced-newspaper/timthumb.php?src=http%3A%2F%2Fwww.themuslimtimes.org%2Fwp-content%2Fuploads%2F2013%2F05%2FOriginal-sin-apple.jpg&q=90&w=479&zc=1'>
+          <img width='400' height='325' src='http://www.themuslimtimes.org/wp-content/themes/advanced-newspaper/timthumb.php?src=http%3A%2F%2Fwww.themuslimtimes.org%2Fwp-content%2Fuploads%2F2013%2F05%2FOriginal-sin-apple.jpg&q=90&w=479&zc=1'>
         </div>
         <div class='card-content'>
           <span class='card-title grey-text text-darken-3'>Is Masturbation a Sin?</span>
